<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_mainpage"
        android:title="메인화면"
        android:icon="@drawable/baseline_home_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_refreshing"
        android:title="새로고침"
        android:icon="@drawable/baseline_cached_black_24dp"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_write"
        android:title="@string/write"
        app:showAsAction="never"/>

    <item android:id="@+id/action_erase"
        android:title="@string/erase"
        app:showAsAction="never" />

    <item android:id="@+id/action_modify"
        android:title="@string/modify"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>