<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/idText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/cnameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/numberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/birthText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birth"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/addressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="4dp"
                android:layout_margin="2dp"
                android:layout_weight="4" >

                <Button
                    android:id="@+id/authButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authButton"
                    android:background="@drawable/round_button_04"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/authText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/auth"
                android:inputType="textPersonName"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="2dp"
                android:paddingLeft="4dp"
                android:paddingRight="2dp"
                android:layout_margin="2dp"
                android:layout_weight="2">

                <Button
                    android:id="@+id/confirmButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmButton"
                    android:background="@drawable/round_button_04"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="4dp"
                android:layout_margin="2dp"
                android:layout_weight="2">

                <Button
                    android:id="@+id/authcanButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authCanButton"
                    android:background="@drawable/round_button_04"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_button_05"
            android:text="@string/registerButton"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimaryLight"/>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>