<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">


    <TextView
        android:id="@+id/boardTitle_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchaseBoard"
        android:textSize="35px"
        android:layout_gravity="center"/>


    <LinearLayout
        android:id="@+id/post_title_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="글 제목" />

        <EditText
            android:id="@+id/purchase_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/post_writer_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="작성자" />

        <EditText
            android:id="@+id/purchase_User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/cname"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/post_password_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/password2" />

        <EditText
            android:id="@+id/purchase_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/password"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/post_period_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/period"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="11">

            <TextView
                android:id="@+id/period_count_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:gravity="end" />

            <TextView
                android:id="@+id/period_day_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/period_day"
                android:textAlignment="center"/>
        </LinearLayout>

        <SeekBar
            android:id="@+id/period_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:max="4"
            android:min="1"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/post_detail_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/detail"/>

        <EditText
            android:id="@+id/purchase_Contents"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/round_square_02"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:scrollbars="vertical" />
    </LinearLayout>


    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/round_button_01"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/saveButton_purchase"
            android:text="@string/save"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/round_button_01"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/cancelButton_purchase"
            android:text="@string/cancle"/>
    </LinearLayout>




</LinearLayout>
