<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab2Activity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearlayout_tab2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn2_first"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@color/ViewPager_Tab_Button_Background"
            android:textColor="@color/ViewPager_Tab_Button_Text"
            android:text="@string/btn_first"/>
        <Button
            android:id="@+id/btn2_second"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@color/ViewPager_Tab_Button_Text"
            android:textColor="@color/ViewPager_Tab_Button_Background"
            android:text="@string/btn_second"/>
        <Button
            android:id="@+id/btn2_third"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@color/ViewPager_Tab_Button_Background"
            android:textColor="@color/ViewPager_Tab_Button_Text"
            android:text="@string/btn_third"/>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/restaurant_btn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/ViewPager_Tab_Button_Text"
            android:text="@string/restaurant"
            android:textColor="@color/ViewPager_Tab_Button_Background"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/map"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/atm_btn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/ViewPager_Tab_Button_Text"
            android:text="@string/atm"
            android:textColor="@color/ViewPager_Tab_Button_Background"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/restaurant_btn"
            app:layout_constraintTop_toTopOf="@+id/map"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/busStation_btn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/ViewPager_Tab_Button_Text"
            android:text="@string/busStation"
            android:textColor="@color/ViewPager_Tab_Button_Background"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/atm_btn"
            app:layout_constraintTop_toTopOf="@+id/map"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/cafe_btn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/ViewPager_Tab_Button_Text"
            android:text="@string/cafe"
            android:textColor="@color/ViewPager_Tab_Button_Background"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/busStation_btn"
            app:layout_constraintTop_toTopOf="@+id/map"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/convenienceStore_btn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/ViewPager_Tab_Button_Text"
            android:text="@string/convenienceStore"
            android:textColor="@color/ViewPager_Tab_Button_Background"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cafe_btn"
            app:layout_constraintTop_toTopOf="@+id/map"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>